[package]
name = "ac-primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = 'parity-scale-codec', version = "2.0.0", default-features = false,  features = ['derive']}
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

sp-core = { version = "4.0.0", default-features = false }
sp-runtime = { version = "4.0.0", default-features = false }
sp-std = { version = "4.0.0", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "hex/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
]