[package]
name = "ac-primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = 'parity-scale-codec', version = "2.0.0", default-features = false,  features = ['derive']}
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

sp-core = { version = "4.1.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "66ff3a566e6ee7d85f30fc11d45047bd41854b9e" }
sp-runtime = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "66ff3a566e6ee7d85f30fc11d45047bd41854b9e" }
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "66ff3a566e6ee7d85f30fc11d45047bd41854b9e" }

[features]
default = ["std"]
std = [
    "codec/std",
    "hex/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
]